@@ -1,3 +1,10 @@
+2014-12-07  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* ColorPerVertexEditorPreview.x3dv:
+	* ColorPerVertexEditor.cpp:
+	* TextureCoordinateEditorRightPreview.x3dv:
+	* TextureCoordinateEditor.cpp: 
+
 2014-12-06  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* AnimationEditor.h:
